[project]
name = "llm-council"
version = "0.2.0"
description = "Multi-model anti-sycophancy verification council via OpenRouter (stdlib-only)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Marco Bellingeri" }]
keywords = ["llm", "council", "openrouter", "anti-sycophancy", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

# No runtime dependencies — stdlib-only by design (`urllib` for HTTP, `unittest` for tests)

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802"]  # test method names may be longer than 80 chars

[tool.ruff.format]
quote-style = "double"
